# ha-lumagen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  hacs.json  pyproject.toml  tui.py  verify_coordinator_fix.py
custom_components/ha_lumagen/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  remote.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/ha_lumagen/translations/: en.json
custom_components/lumagen/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  remote.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/lumagen/translations/: en.json
docs/: architecture.md  aspect_ratio_notes.md  development.md  radiance_pro_models.md  rs232_command_reference.md  state_management.md
tests/: test_client.py  test_services.py
